--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
   <!-- 页头 -->
   <header>
-    <h1>{{siteName}}</h1>
-    <p>{{tagline}}</p>
+    <h1>{{BeautyFashion}}</h1>
+    <p>{{Love&Share}}</p>
   </header>
   
   <!-- 导航 -->
@@ -54,4 +54,5 @@
     <p>&copy; {{year}} {{siteName}} | Powered by Cloudflare Workers</p>
   </footer>
 </body>
+
 </html>
