--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{description}}">
-  <title>{{title}} - 我的时尚小站</title>
+  <title>{{title}} - Beauty Fashion</title>
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9f9f9; color:#333;}
     header { background:#222; color:#fff; padding:1rem; text-align:center;}
@@ -28,15 +28,15 @@
   
   <!-- 导航 -->
   <nav>
-    <a href="/">首页</a>
-    <a href="/category/fashion">时尚</a>
-    <a href="/category/beauty">美妆</a>
-    <a href="/about">关于我们</a>
+    <a href="/">homepage</a>
+    <a href="/category/fashion">fashion</a>
+    <a href="/category/beauty">beauty</a>
+    <a href="/about">About Us</a>
   </nav>
   
   <!-- 主体内容 -->
   <main>
-    {{#articles}}
+    {{pretty girl}}
     <article>
       <h2><a href="/article/{{id}}/{{slug}}.html">{{title}}</a></h2>
       <div class="date">{{createDate}}</div>
@@ -56,3 +56,4 @@
 </body>
 
 </html>
+
