--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
   <!-- 页头 -->
   <header>
-    <h1>{{BeautyFashion}}</h1>
-    <p>{{Love&Share}}</p>
+    <h1>BeautyFashion</h1>
+    <p>Love&Share</p>
   </header>
   
   <!-- 导航 -->
@@ -36,7 +36,7 @@
   
   <!-- 主体内容 -->
   <main>
-    {{pretty girl}}
+    Pretty girl
     <article>
       <h2><a href="/article/{{id}}/{{slug}}.html">{{title}}</a></h2>
       <div class="date">{{createDate}}</div>
@@ -56,4 +56,5 @@
 </body>
 
 </html>
+
 
