--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main>
     Pretty girl
     <article>
-      <h2><a href="/article/{{id}}/{{slug}}.html">{{title}}</a></h2>
+      <h2><a href="/article/{{id}}/{{slug}}.html">{{Home}}</a></h2>
       <div class="date">{{createDate}}</div>
       <p>{{excerpt}}</p>
     </article>
@@ -56,6 +56,7 @@
 </body>
 
 </html>
+
 
 
 
