--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{description}}">
-  <title>{{Home}} - Beauty Fashion</title>
+  <title>Beauty Fashion</title>
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9f9f9; color:#333;}
     header { background:#222; color:#fff; padding:1rem; text-align:center;}
@@ -38,7 +38,6 @@
   <main>
     Pretty girl
     <article>
-      <h2><a href="/article/{{id}}/{{slug}}.html">{{Home}}</a></h2>
       <div class="date">{{createDate}}</div>
       <p>{{excerpt}}</p>
     </article>
@@ -56,6 +55,7 @@
 </body>
 
 </html>
+
 
 
 
