--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
   <!-- 主体内容 -->
   <main>
     Pretty girl
-    <article>
-      <div class="date">{{createDate}}</div>
-      <p>{{excerpt}}</p>
-    </article>
-    {{/articles}}
+  <article>
+  <p>a girl wearing nightgown</p>
+  <img src="/images/Pretty.jpg" alt="Pretty girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
+  </article>
 
     {{^articles}}
     <p>暂无内容，敬请期待 ✨</p>
@@ -55,6 +54,7 @@
 </body>
 
 </html>
+
 
 
 
