--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     Pretty girl
   <article>
   <p>a girl wearing nightgown</p>
-  <img src="/images/Pretty.jpg" alt="Pretty girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
+  <img src="/images/Pretty.png" alt="Pretty girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
   </article>
 
     {{^articles}}
@@ -54,6 +54,7 @@
 </body>
 
 </html>
+
 
 
 
