--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
   <img src="https://raw.githubusercontent.com/immerserain-web/Beauty-Fashion/main/images/Pretty.png" alt="Pretty girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
   </article>
 
-    {{^articles}}
-    <p>暂无内容，敬请期待 ✨</p>
-    {{/articles}}
+    <p>A woman is wearing a deep - red slip dress adorned with delicate lace trimmings at the neckline, hem, and matching lace cuffs on her wrists.The background features lush green foliage, creating a contrast with her elegant attire. ✨</p>
   </main>
 
   <!-- 页脚 -->
@@ -54,6 +52,7 @@
 </body>
 
 </html>
+
 
 
 
