--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <!-- 导航 -->
   <nav>
     <a href="/">homepage</a>
-    <a href="/fashion.html">fashion</a>
-    <a href="/beauty.html">beauty</a>
-    <a href="/about.html">About Us</a>
+    <a href="fashion.html">fashion</a>
+    <a href="beauty.html">beauty</a>
+    <a href="about.html">About Us</a>
   </nav>
   
   <!-- 主体内容 -->
@@ -52,4 +52,5 @@
 </body>
 
 </html>
+
 
