--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@
   <title>About Us - Beauty Fashion</title>
 </head>
 <body>
-  <h1>Fashion</h1>
+  <h1>About Us</h1>
   <p>This is the about page ✨</p>
   <a href="../index.html">Back to homepage</a>
 </body>
+
 </html>
