--- a/about.html
+++ b/about.html
@@ -2,12 +2,48 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>About Us - Beauty Fashion</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="{{description}}">
+  <title>Beauty Fashion</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9f9f9; color:#333;}
+    header { background:#222; color:#fff; padding:1rem; text-align:center;}
+    header h1 { margin:0; font-size:1.8rem; }
+    nav { background:#444; padding:.5rem; text-align:center;}
+    nav a { margin:0 10px; color:#fff; text-decoration:none; }
+    nav a:hover { text-decoration:underline; }
+    main { max-width:900px; margin:2rem auto; padding:1rem; background:#fff; border-radius:8px; }
+    article { padding:1rem 0; border-bottom:1px solid #eee; }
+    article h2 { margin-top:0; color:#444; }
+    .date { font-size:0.9rem; color:#999; }
+    footer { background:#222; color:#bbb; text-align:center; padding:1rem; margin-top:2rem; }
+  </style>
 </head>
 <body>
-  <h1>About Us</h1>
-  <p>This is the about page ✨</p>
-  <a href="../index.html">Back to homepage</a>
+  <!-- 页头 -->
+  <header>
+    <h1>BeautyFashion</h1>
+    <p>Love&Share</p>
+  </header>
+  
+  <!-- 导航 -->
+  <nav>
+    <a href="/">homepage</a>
+    <a href="about.html">About Us</a>
+  </nav>
+  
+  <!-- 主体内容 -->
+  <main>
+    Our contact information is below
+  <article>
+  <p>。。。。。。。。。。。</p>
+  </article>
+  </main>
+
+  <!-- 页脚 -->
+  <footer>
+    <p>&copy; {{year}} {{siteName}} | Powered by Cloudflare Workers</p>
+  </footer>
 </body>
 
 </html>
