--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     Pretty girl
   <article>
   <p>a girl wearing nightgown</p>
-  <img src="https://raw.githubusercontent.com/immerserain-web/Beauty-Fashion/main/images/Pretty.png" alt="Pretty girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
+  <img src="https://raw.githubusercontent.com/immerserain-web/Beauty-Fashion/main/images/1.png" alt="Fashionable girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
   </article>
 
-    <p>A woman is wearing a deep - red slip dress adorned with delicate lace trimmings at the neckline, hem, and matching lace cuffs on her wrists.The background features lush green foliage, creating a contrast with her elegant attire. ✨</p>
+    <p>A European or American woman around 25 years old, with long, deep brown wavy curls cascading down to her shoulders, has well-defined facial features paired with light coffee-colored arched eyebrows. She stands in front of a retro-style beauty display shelf. In her left hand, she holds a tube of matte true-red lipstick, gently pressing the lipstick bullet against her lower lip, her eyes focused on her reflection in the mirror. Behind her, the shelf is layered with blushes in gilded cases, earth-tone eyeshadow palettes, and makeup brushes tucked into clear glass bottles. A warm, soft light filters down from above, casting delicate sheens on the surface of the cosmetics. The floor is covered with a light beige non-slip mat, and a small potted plant sits in the corner. ✨</p>
   </main>
 
   <!-- 页脚 -->
@@ -50,6 +50,7 @@
 </body>
 
 </html>
+
 
 
 
