--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <main>
     Pretty girl
   <article>
-  <p>a girl wearing nightgown</p>
+  <p>A fashionable girl</p>
   <img src="https://raw.githubusercontent.com/immerserain-web/Beauty-Fashion/main/images/1.png" alt="Fashionable girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
   </article>
 
@@ -50,6 +50,7 @@
 </body>
 
 </html>
+
 
 
 
