--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   
   <!-- 主体内容 -->
   <main>
-    Pretty girl
+    Fashionable girl
   <article>
-  <p>A fashionable girl</p>
+  <p>A girl is putting on makeup</p>
   <img src="https://raw.githubusercontent.com/immerserain-web/Beauty-Fashion/main/images/1.png" alt="Fashionable girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
   </article>
 
@@ -50,6 +50,7 @@
 </body>
 
 </html>
+
 
 
 
