--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
   <img src="https://raw.githubusercontent.com/immerserain-web/Beauty-Fashion/main/images/1.png" alt="Fashionable girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
   </article>
 
-    <p>A European or American woman around 25 years old, with long, deep brown wavy curls cascading down to her shoulders, has well-defined facial features paired with light coffee-colored arched eyebrows. She stands in front of a retro-style beauty display shelf. In her left hand, she holds a tube of matte true-red lipstick, gently pressing the lipstick bullet against her lower lip, her eyes focused on her reflection in the mirror. Behind her, the shelf is layered with blushes in gilded cases, earth-tone eyeshadow palettes, and makeup brushes tucked into clear glass bottles. A warm, soft light filters down from above, casting delicate sheens on the surface of the cosmetics. The floor is covered with a light beige non-slip mat, and a small potted plant sits in the corner. ✨</p>
+    <p>Whether it’s a work presentation or a dinner date, a great lipstick is your secret to standing out.​
+Our matte true red lipstick glides on smoothly with easy color payoff. A light swipe adds a fresh flush to your complexion, while a bolder application amps up your presence. The matte texture won’t crease or dry out your lips.​
+Infused with plant-derived lip-nourishing ingredients, it keeps your lips soft even in autumn and winter. With long-lasting, transfer-resistant wear, your flawless lip look stays put all day.​
+From daily commutes to special occasions, a simple twist and swipe instantly elevates your entire look, helping you shine with confidence and unique charm.✨</p>
   </main>
 
   <!-- 页脚 -->
@@ -50,6 +53,7 @@
 </body>
 
 </html>
+
 
 
 
