--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p>Whether it’s a work presentation or a dinner date, a great lipstick is your secret to standing out.​
 Our matte true red lipstick glides on smoothly with easy color payoff. A light swipe adds a fresh flush to your complexion, while a bolder application amps up your presence. The matte texture won’t crease or dry out your lips.​
 Infused with plant-derived lip-nourishing ingredients, it keeps your lips soft even in autumn and winter. With long-lasting, transfer-resistant wear, your flawless lip look stays put all day.​
-From daily commutes to special occasions, a simple twist and swipe instantly elevates your entire look, helping you shine with confidence and unique charm.✨</p>
+From daily commutes to special occasions, a simple twist and swipe instantly elevates your entire look, helping you shine with confidence and unique charm.If you're interested, feel free to contact us.✨</p>
   </main>
 
   <!-- 页脚 -->
@@ -53,6 +53,7 @@ From daily commutes to special occasions, a simple twist and swipe instantly ele
 </body>
 
 </html>
+
 
 
 
