--- a/index7.html
+++ b/index7.html
@@ -40,7 +40,7 @@
   <img src="https://raw.githubusercontent.com/immerserain-web/Beauty-Fashion/main/images/8.png" alt="Fashionable girl" style="max-width:100%; border-radius:6px; margin-top:10px;">
   </article>
 
-    <p>Hey girls! Still worried about not finding your ideal lipstick? Look here! Our lipsticks have a wide range of shades, from vibrant orange to sparkling gold. We have everything you want. The texture is silky smooth, and it feels light and non-sticky on the lips, easily creating a plump lip look. Whether it's for daily commuting or a date party, with it, you'll be the most dazzling one in the crowd. Come and pick your own one～✨</p>
+    <p>Hey girls, look! This lipstick is amazing! It has a rich and beautiful range of shades. Whether it's a gentle pink tone or a vibrant orange-red, it can be easily handled. The texture is smooth, and it feels soft and moisturizing on the lips without drying out. With a light swipe, the lips instantly become plump and pigmented. In the pink-themed beauty space, it's even more eye-catching. For daily outings, dates, and dinners, with it, you'll be the fashion focus. Get it now～✨</p>
   </main>
 
   <!-- 页脚 -->
@@ -48,5 +48,6 @@
     <p>&copy; {{year}} {{siteName}} | Powered by Cloudflare Workers</p>
   </footer>
 </body>
+
 
 </html>
